--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
 env:
-  AZURE_WEBAPP_NAME: ad-taskmanagement-demo
+  AZURE_WEBAPP_NAME: "ad-demo-taskmanagementapp"
   AZURE_WEBAPI_PACKAGE_PATH: "./publish"
   AZURE_WEBUI_PACKAGE_PATH: "./publish/wwwroot"
   
@@ -40,7 +40,7 @@ jobs:
         run: dotnet test ./TaskManagementApp.UnitTests/TaskManagementApp.UnitTests.csproj --no-build --filter "Category!=Exclude" --verbosity normal
 
       - name: Publish backend
-        run: dotnet publish ./TaskManagementApp.WebAPI/TaskManagementApp.WebAPI.csproj --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        run: dotnet publish ./TaskManagementApp.WebAPI/TaskManagementApp.WebAPI.csproj --configuration Release --no-build --output '${{ env.AZURE_WEBAPI_PACKAGE_PATH }}'
 
       - name: Install dependencies for frontend
         run: npm install --prefix ./ClientApp
@@ -52,3 +52,11 @@ jobs:
 
       - name: Copy frontend build to backend publish folder
         run: cp -r ./ClientApp/build/* ${{ env.AZURE_WEBUI_PACKAGE_PATH }}       
+
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}  # Replace with your App Service name
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: "${{ env.AZURE_WEBAPI_PACKAGE_PATH }}"
