--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Build
         run: npm run build --if-present --prefix
         working-directory: ./TaskManagementApp.UI
+
+      - name: Create wwwroot directory
+        run: mkdir -p ./publish/wwwroot
         
       - name: Copy frontend build to backend publish folder
         run: cp -r ./dist/task-management-app.ui/* ${{ env.AZURE_WEBUI_PACKAGE_PATH }}  
