--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,11 +52,19 @@ jobs:
 
       - name: Create wwwroot directory
         run: mkdir -p ./publish/wwwroot
-        
+
+      - name: List contents of publish directory
+        run: ls -l ./publish
+
+      - name: List contents of dist directory
+        run: ls -l ./TaskManagementApp.UI/dist/task-management-app.ui
+      
       - name: Copy frontend build to backend publish folder
         run: cp -r ./dist/task-management-app.ui/* ${{ env.AZURE_WEBUI_PACKAGE_PATH }}  
-        working-directory: ./TaskManagementApp.UI     
 
+      - name: List contents of wwwroot directory
+        run: ls -l ./publish/wwwroot
+      
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         with:
